# webtool

./: .gitmodules  Dockerfile  index.html
.github/workflows/: deploy.yml  deploy_pages.yml  deploy_tencent.yml
assets/: index-BgpmVKWJ.css  index-BzH8SsR1.js  index-CetDZgot.js  index-Dz9PxcWg.css  index-XufdTVVT.js  index-zkBgsN_x.js
backend/: .gitignore  CMakeLists.txt  READMD.md
backend/models/: realesrgan-x4.engine
backend/proto/: copy_service.proto  map_pinning.proto  qr_code.proto  super_resolution_service.proto
backend/src/: backend.cpp  grpc_server.cpp  http_server.cpp  log.h  main.cpp  service.cpp  service.h
backend/src/services/: copy_service.cpp  copy_service.h  copy_text.cpp  copy_text.h  map_pinning.cpp  map_pinning.h  qr_code.cpp  qr_code.h  super_resolution.cpp  super_resolution.h
backend/src/utils/: adapter.cpp  adapter.h  cuda_utils.cu  cuda_utils.h  log.h  type_traits.h  utils.cpp  utils.h
frontend/: .env  .env.development  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  index.css
frontend/src/common/: utils.tsx
frontend/src/components/: AudioRecorder.module.css  AudioRecorder.tsx  Colors.module.css  Colors.tsx  Copy.module.css  Copy.tsx  Home.module.css  Home.tsx  MapPinning.module.css  MapPinning.tsx  QrCode.tsx  SideBar.module.css  SideBar.tsx  SuperResolution.module.css  SuperResolution.tsx  Test.tsx  Timestamp.module.css  Timestamp.tsx
frontend/src/hooks/: useTitle.tsx
